z-index fix

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -197,4 +197,6 @@ table {
 .pserror{
 	margin: 0;
 	float: left;
+	position: relative;
+	z-index: 20;
 }
